--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ NODE_ENV=development
 APP_KEY=K8j1fCREyAOAUnFABeKkm5RNxVbp8tNH
 DRIVE_DISK=local
 DB_CONNECTION=sqlite
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_USERNAME=<username>
+SMTP_PASSWORD=<password>
+CACHE_VIEWS=false
