--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "dependencies": {
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^16.3.2",
+    "@adonisjs/mail": "^7.2.4",
     "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/view": "^6.1.1",
     "luxon": "^2.2.0",
     "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
