--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "youch-terminal": "^2.0.0"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.10",
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^16.3.2",
     "@adonisjs/mail": "^7.2.4",
